--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "build": "rimraf dist && babel lib -d dist",
     "prepublish": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "form-data": "1.0.0-rc4",
+    "got": "6.3.0"
+  },
   "devDependencies": {
     "babel-cli": "6.7.5",
     "babel-preset-es2015": "6.6.0",
